[build-system]
requires = [ "scikit-build-core>=0.9.0", "setuptools>=41.0.1", "pybind11", "numpy", "build" ]
build-backend = "scikit_build_core.build"

[project]
name = "pyhesaff"
version = "2.2.0"
description = "Routines for computation of hessian affine keypoints in images."
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.1.0; python_version >= '3.13'",
    "numpy>=1.26.0; python_version >= '3.12' and python_version < '3.13'",
    "numpy>=1.23.2; python_version >= '3.11' and python_version < '3.12'",
    "numpy>=1.21.6; python_version >= '3.10' and python_version < '3.11'",
    "numpy>=1.19.3; python_version >= '3.9' and python_version < '3.10'",
    "ubelt>=1.3.4",
]
authors = [
    { name = "Krystian Mikolajczyk" },
    { name = "Michal Perdoch" },
    { name = "Jon Crall", email = "erotemic@gmail.com" },
    { name = "Avi Weinstock" },
]
license = { text = "Apache 2" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
nanobind = ["nanobind>=2.0.0"]
runtime = [
    "numpy>=2.1.0; python_version >= '3.13'",
    "numpy>=1.26.0; python_version >= '3.12' and python_version < '3.13'",
    "numpy>=1.23.2; python_version >= '3.11' and python_version < '3.12'",
    "numpy>=1.21.6; python_version >= '3.10' and python_version < '3.11'",
    "numpy>=1.19.3; python_version >= '3.9' and python_version < '3.10'",
    "ubelt>=1.3.4",
]
tests = [
    "utool>=2.2.1",
    "xdoctest>=1.1.5",
    "pytest>=8.1.1; python_version >= '3.11'",
    "pytest>=6.2.5; python_version < '3.11'",
    "pytest-cov>=3.0.0",
    "pytest_timeout>=2.3.1; python_version >= '3.12'",
    "pytest_timeout>=1.4.2; python_version < '3.12'",
    "coverage>=7.3.0; python_version >= '3.12'",
    "coverage>=6.1.1; python_version >= '3.10' and python_version < '3.12'",
    "coverage>=5.3.1; python_version < '3.10'",
    "requests>=2.27.1",
]
headless = [
    "opencv-python-headless>=4.10.0.84; python_version >= '3.13'",
    "opencv-python-headless>=4.5.5.64; python_version >= '3.11' and python_version < '3.13'",
    "opencv-python-headless>=4.5.4.58; python_version >= '3.10' and python_version < '3.11'",
    "opencv-python-headless>=3.4.15.55; python_version >= '3.9' and python_version < '3.10'",
]
graphics = [
    "opencv-python>=4.10.0.84; python_version >= '3.13'",
    "opencv-python>=4.5.5.64; python_version >= '3.11' and python_version < '3.13'",
    "opencv-python>=4.5.4.58; python_version >= '3.10' and python_version < '3.11'",
    "opencv-python>=3.4.15.55; python_version >= '3.9' and python_version < '3.10'",
]
optional = []

[tool.mypy]
ignore_missing_imports = true
exclude = ".*"

[tool.xcookie]
tags = [ "github", "cv2", "erotemic", "binpy", "nosrcdist"]
mod_name = "pyhesaff"
rel_mod_parent_dpath = "."
#os = [ "linux", "osx", "win",]
os = [ "linux" ]
repo_name = "pyhesaff"
min_python = "3.9"
author = "Krystian Mikolajczyk, Michal Perdoch, Jon Crall, Avi Weinstock"
url = "https://github.com/Erotemic/pyhesaff"
author_email = "erotemic@gmail.com"
version = "{mod_dpath}/__init__.py::__version__"
license = "Apache 2"
dev_status = "beta"
description = "Routines for computation of hessian affine keypoints in images."


#URL_LIST = [
#    'http://cmp.felk.cvut.cz/~perdom1/hesaff/',
#    'https://github.com/Erotemic/hesaff',
#]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
build-frontend = "build"
skip = "pp* *-musllinux_*"
build-verbosity = 1
environment = "PYTHONUTF8=1"
# testing on the build container fails because we need the cv2
# module which needs a new zlib that we cant use to build with
# disable testing in cibuildwheel for now (we need to add it in as a postprocessing step)
test-skip = "*"  
test-requires = [ "-r requirements/tests.txt", "-r requirements/headless.txt"]
test-command = "python {project}/run_tests.py"

# See: ~/code/vtool_ibeis_ext/dev/build_base_docker2.py

manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"

#manylinux-x86_64-image = "quay.io/erotemic/manylinux2014_x86_64_for:opencv"
#manylinux-i686-image = "quay.io/erotemic/manylinux2014_i686_for:opencv"

[tool.cibuildwheel.linux]

# Work around issue to support older glib toolchain when installing opencv
before-build = """
set -eux
yum -y install epel-release
yum -y install opencv-devel
"""

#[tool.cibuildwheel.linux]
#before-build = "yum install -y opencv-devel"

#[tool.cibuildwheel.windows]
[tool.cibuildwheel.windows]
before-all = "vcpkg install opencv4:x64-windows"
repair-wheel-command = "python -m pip install delvewheel && python -m delvewheel repair -w {dest_dir} --add-path C:/vcpkg/installed/x64-windows/bin {wheel}"

#[tool.cibuildwheel.macos]
#before-all = "brew install lz4"

[tool.pytest.ini_options]
addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py"
norecursedirs = ".git ignore build __pycache__ dev _skbuild"
filterwarnings = [ "default", "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning", "ignore:.*Define the __nice__ method for.*:Warning", "ignore:.*private pytest class or function.*:Warning",]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", ".*  # pragma: no cover", ".*  # nocover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if 0:", "if trace is not None", "verbose = .*", "^ *raise", "^ *pass *$", "if _debug:", "if __name__ == .__main__.:", ".*if six.PY2:",]
omit = [ "pyhesaff/__main__.py", "*/setup.py",]


[tool.ruff]
line-length = 80
target-version = "py39"

[tool.ruff.lint]
# Enable Flake8 (E, F) and isort (I) rules.
select = ["E", "F", "I"]
# Ignore specific rules, for example, E501 (line too long) as it's handled by the formatter.
ignore = [
    "E501",  # line too long
    "E402",  # Module level import not at top of file
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
